# dtkit

./: .gitignore  HANDOFF.md  LICENSE  PHASE2_SUMMARY.md  PHASE4_PLAN.md  changelog.md  cleanup_test_logs.do  dtkit.pkg  dtparquet.md  dtparquet_phase1_lessons.md  guide_sthlp.md  package_maintenance_guide.md  phase5.md  phase7_modular.md  readme.md  run_all_tests.do  stata.toc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-dtparquet.yml
ado/: dtfreq.ado  dtfreq.sthlp  dtkit.ado  dtkit.sthlp  dtmeta.ado  dtmeta.sthlp  dtparquet.ado  dtparquet.py  dtparquet.sthlp  dtstat.ado  dtstat.sthlp
ado/ancillary_files/examples/: dtparquet_examples.do  dtstat_examples.do
ado/ancillary_files/test/: benchmark_dtparquet_vs_pq.do  dtparquet_test_t03_pool_lifecycle.do  dtparquet_test_t04_metadata_footer.do  dtparquet_test_t05_typed_transfer.do
ado/ancillary_files/test/dtfreq/: dtfreq_test1.do  dtfreq_test2.do
ado/ancillary_files/test/dtkit/: dtkit_test1.ado
ado/ancillary_files/test/dtmeta/: dtmeta_test1.do  dtmeta_test2.do
ado/ancillary_files/test/dtparquet/: dtparquet_benchmark_chunksize.do  dtparquet_installed_benchmark.do  dtparquet_repro_pihps.do  dtparquet_test1.do  dtparquet_test2.do  dtparquet_test3.do  dtparquet_test4.do  dtparquet_test5.do  dtparquet_test6.do  dtparquet_test7.do  dtparquet_test8.do  dtparquet_test9.do  dtparquet_test_pyarrow.do  dtparquet_vs_pq.do  test_rust_plugin.do
ado/ancillary_files/test/dtparquet/data/: rust_compress_level_ok.parquet  rust_compress_snappy.parquet
ado/ancillary_files/test/dtparquet/fixtures/foreign/: foreign_cat_arrow_dict.parquet  foreign_cat_pandas.parquet
ado/ancillary_files/test/dtstat/: dtstat_test1.do  dtstat_test2.do
plugin/: Cargo.toml  build.rs
plugin/crates/stata-sys/: Cargo.toml  build.rs
plugin/crates/stata-sys/src/: lib.rs
plugin/src/: boundary.rs  commands.rs  config.rs  downcast.rs  engine.rs  error.rs  filter.rs  filter_impl.rs  filter_impl_lang.rs  handlers.rs  if_filter.rs  lib.rs  logic.rs  mapping.rs  metadata.rs  metrics.rs  parse.rs  plan.rs  read.rs  schema.rs  sql_from_if.rs  stata_interface.rs  transfer.rs  transfer_reader.rs  transfer_reader_codec.rs  transfer_reader_write.rs  transfer_writer.rs  utilities.rs  write.rs
plugin/tests/: plan_module.rs  read_scan_plan.rs  smoke_integration.rs
rust/: Cargo.toml
rust/crates/stata-sys/: build.rs
rust/src/: lib.rs  metadata.rs  read.rs  stata_interface.rs  write.rs
